fix: show right list on favorites

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://app.loo.com.ve/to-do",
+  "homepage": "https://todo.loo.com.ve",
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "^4.2.4",
